src/testing/private_tests/negative_tests/bad_pointers.eds
void main() {
    int* a[3];
    int* b,c,w;
    int d[3];
    int** z;
    
    int** p;
    
    d[0] = 10; d[1] = 15; d[2] = 20;
    *b = 30; *c = 40;
    a[0] = b; a[1] = c; a[2] = d;
    
    z = a+1;
    *z += 100;
    a[2][1] += 1000;
    
    p = d; // different types
    *(p+1) += 10000;
    d = c; // non-assignable (lhs is immutable)
    (*d)++;
    d = p; // non-assignable (lhs is immutable)
}
